package batailleNavale.models;

public class Game {
}
