package batailleNavale.models.players;

public  abstract class Player {
}
