package bataille_navale.models.items.traps;

import bataille_navale.models.items.Item;

public abstract class Trap extends Item {

    public Trap(int size, int capacity){
        super(size, capacity);
    }

}
